
 * You can now right-click-and-drag the group resize handle to easily change the number of rows and columns of a group.
 * Added group settings that allow you to specify when a group should be shown based on the role that your current specialization fulfills.
 * You can now enter "none" or "blank" as a custom texture for an icon to force it to display no texture.
 * New Condition: Specialization Role
 * Dramatically decreased memory usage, especially for icons that have no icon type assigned.

 * Bug Fixes:
 ** Icons should now always have the correct size after their view changes or the size or ID of a group changes.
 ** Fixed an issue where strings imported from older version of TellMeWhen (roughly pre-v6.0.0) could have their StackMin/Max and DurationMin/Max settings as strings instead of numbers.

===v6.2.6===
 * Bug Fixes:
 ** Added a hack to ElvUI's timer texts so that they will once again obey the setting in TellMeWhen. Previously, they would be enabled for all icons because of a change made by ElvUI's developers.
 ** Spell Cooldown icons that are tracking by spellID instead of by name should once again reflect spell charges properly (this functionality was disrupted by a bug introduced by Blizzard in patch 5.4).

===v6.2.5===
 * ElvUI's timer texts are once again supported by TellMeWhen.

===v6.2.4===
 * Added DogTags for string.gsub and string.find.
 * Added Yu'lon's Barrier to the DamageShield equivalency.

 * Bug Fixes:
 ** IconModule_Alpha\Alpha.lua:84: attempt to index local "IconModule_Alpha" (a nil value)
 ** Rune icons will now behave properly when no runes are found that match the types configured for the icon.
 ** The Banish loss of control type was accidentally linked to the Fear loss of control type - this has been fixed.
 ** Unit cooldown icons should now attempt to show the first usable spell even if no units being checked have casted any spells yet.

===v6.2.3===